--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,6 +6,7 @@
     "dev": "infisical run -- next dev",
     "dev:prod": "infisical run --env prod -- next dev",
     "build": "infisical run -- next build",
+    "build:prod": "infisical run --env prod -- next build",
     "start": "infisical run --env prod -- next start",
     "lint": "next lint",
     "format": "prettier --check --ignore-path .gitignore .",
@@ -37,7 +38,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.6",
+    "next": "^15.2.4",
     "next-auth": "5.0.0-beta.25",
     "puppeteer": "^23.11.1",
     "react": "^19.0.0",
