--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "infisical run -- astro dev --host",
+    "dev:prod": "infisical run --env prod -- astro dev --host",
     "start": "infisical run --env prod -- astro dev",
     "build": "infisical run -- astro build",
+    "build:prod": "infisical run --env prod -- astro build",
     "preview": "infisical run -- astro preview",
     "astro": "infisical run -- astro",
     "lint": "eslint .",
@@ -16,67 +18,67 @@
   "dependencies": {
     "@/data-access": "workspace:*",
     "@/ui": "workspace:*",
-    "@astrojs/react": "^4.2.0",
+    "@astrojs/react": "^4.2.3",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^5.1.5",
-    "@astrojs/vercel": "^8.0.6",
+    "@astrojs/vercel": "^8.1.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fontsource/bakbak-one": "^5.1.1",
-    "@fontsource/bebas-neue": "^5.1.1",
-    "@fontsource/montserrat": "^5.1.1",
-    "@fontsource/open-sans": "^5.1.1",
+    "@fontsource/bakbak-one": "^5.2.5",
+    "@fontsource/bebas-neue": "^5.2.5",
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/open-sans": "^5.2.5",
     "@fontsource/parisienne": "^5.2.5",
-    "@fontsource/roboto": "^5.1.1",
-    "@mui/material": "^6.4.3",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/material": "^6.4.11",
     "@radix-ui/react-progress": "1.1.1",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@splidejs/splide-extension-video": "^0.8.0",
-    "@stripe/react-stripe-js": "^3.1.1",
-    "@stripe/stripe-js": "^5.6.0",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^5.10.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@vercel/analytics": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
-    "astro": "^5.3.0",
-    "autoprefixer": "^10.4.20",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "astro": "^5.6.1",
+    "autoprefixer": "^10.4.21",
     "balloons-js": "^0.0.2",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.469.0",
-    "postcss": "^8.5.1",
-    "postcss-cli": "^11.0.0",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^11.0.1",
     "puppeteer": "^23.11.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
-    "resend": "^4.1.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.0",
+    "resend": "^4.2.0",
     "rough-notation": "^0.5.1",
     "sharp": "^0.33.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.24.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "clsx": "^2.1.1",
-    "daisyui": "^4.12.23",
+    "daisyui": "^4.12.24",
     "dotenv": "^16.4.7",
-    "eslint": "^9.20.0",
-    "prettier": "^3.5.0",
+    "eslint": "^9.24.0",
+    "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "stripe": "^17.6.0",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar": "^4.0.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.2.1"
+    "tailwind-scrollbar": "^4.0.2",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.6"
   }
 }
