--- a/packages/data-access/package.json
+++ b/packages/data-access/package.json
@@ -7,10 +7,10 @@
     "build": "prisma generate",
     "dev": "prisma generate && infisical run -- prisma db pull",
     "migrate": "infisical run -- pnpx prisma migrate dev",
-    "generate": "infisical run -- prisma generate && infisical run -- prisma db push",
+    "generate": "prisma generate",
     "studio": "infisical run -- pnpx prisma studio",
     "push": "infisical run -- prisma db push",
-    "push-prod": "infisical run --env=prod -- prisma db push",
+    "push:prod": "infisical run --env=prod -- prisma db push",
     "prod": "infisical run -- prisma generate -- prisma db pull"
   },
   "keywords": [],
@@ -18,14 +18,14 @@
   "license": "ISC",
   "dependencies": {
     "@/utils": "workspace:*",
-    "@stripe/stripe-js": "^4.10.0",
-    "resend": "^4.1.2",
-    "stripe": "^16.12.0"
+    "@stripe/stripe-js": "^7.0.0",
+    "resend": "^4.2.0",
+    "stripe": "^18.0.0"
   },
   "devDependencies": {
-    "@prisma/client": "^5.22.0",
-    "@types/node": "^22.13.1",
-    "prisma": "^5.22.0"
+    "@prisma/client": "^6.6.0",
+    "@types/node": "^22.14.0",
+    "prisma": "^6.6.0"
   },
   "exports": {
     "./*": "./*.ts",
