--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,47 +11,48 @@
     "test": "echo \"Error: no test specified\" as exit 1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.6",
-    "@eslint/js": "^9.20.0",
-    "@types/react": "^19.0.8",
-    "autoprefixer": "^10.4.20",
+    "@eslint/compat": "^1.2.8",
+    "@eslint/js": "^9.24.0",
+    "@types/react": "^19.1.0",
+    "autoprefixer": "^10.4.21",
     "esbuild": "^0.23.1",
-    "eslint": "^9.20.0",
-    "eslint-plugin-react": "^7.37.4",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
+    "eslint": "^9.24.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^15.15.0",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.23.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
   },
   "peerDependencies": {
     "react": "^18.2.0"
   },
   "dependencies": {
     "@/utils": "workspace:*",
-    "@headlessui/react": "^2.2.0",
+    "@headlessui/react": "^2.2.1",
     "@hookform/resolvers": "^3.10.0",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-tooltip": "^1.1.8",
-    "@tanstack/react-table": "^8.20.6",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@tanstack/react-table": "^8.21.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.487.0",
     "react-day-picker": "^8.10.1",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
+    "react-hook-form": "^7.55.0",
+    "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "exports": {
     "./components/*": [
