--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -66,10 +66,12 @@
     "sharp": "^0.34.1",
     "stripe": "^18.0.0",
     "tailwind-merge": "^3.2.0",
-    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "utils": "workspace:*",
     "vite": "^6.3.2"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^4.0.2"
   }
 }
