--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -62,6 +62,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3"
   }
