--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,14 +16,14 @@
     "vercel-build": "pnpm run vercel-prisma && eslint . && astro build"
   },
   "dependencies": {
-    "@astrojs/react": "^4.2.4",
+    "@astrojs/react": "^4.2.5",
     "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.0",
+    "@astrojs/sitemap": "^3.3.1",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@astrojs/vercel": "^8.1.3",
+    "@astrojs/vercel": "^8.1.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@eslint/js": "^9.25.0",
+    "@eslint/js": "^9.25.1",
     "@fontsource/bakbak-one": "^5.2.5",
     "@fontsource/bebas-neue": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
@@ -31,37 +31,37 @@
     "@fontsource/parisienne": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.0.2",
-    "@radix-ui/react-alert-dialog": "^1.1.10",
-    "@radix-ui/react-progress": "1.1.3",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
     "@splidejs/splide-extension-video": "^0.8.0",
     "@stripe/react-stripe-js": "^3.6.0",
-    "@stripe/stripe-js": "^7.1.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vercel/analytics": "^1.5.0",
-    "astro": "^5.7.4",
+    "astro": "^5.7.5",
     "autoprefixer": "^10.4.21",
     "balloons-js": "^0.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "daisyui": "^5.0.27",
+    "daisyui": "^5.0.28",
     "data-access": "workspace:*",
-    "framer-motion": "^12.7.4",
-    "lucide-react": "^0.487.0",
-    "puppeteer": "^24.6.1",
+    "framer-motion": "^12.9.1",
+    "lucide-react": "^0.503.0",
+    "puppeteer": "^24.7.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.0",
+    "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.1",
-    "resend": "^4.3.0",
+    "react-router-dom": "^7.5.2",
+    "resend": "^4.4.1",
     "rough-notation": "^0.5.1",
     "sharp": "^0.34.1",
     "stripe": "^18.0.0",
@@ -69,7 +69,7 @@
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "utils": "workspace:*",
-    "vite": "^6.3.2"
+    "vite": "^6.3.3"
   },
   "devDependencies": {
     "tailwind-scrollbar": "^4.0.2"
