--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@splidejs/splide": "^4.1.4",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
