--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -20,16 +20,19 @@
     "@next/env": "^15.3.1",
     "@prisma/nextjs-monorepo-workaround-plugin": "^6.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
     "@vercel/functions": "^2.0.0",
     "class-variance-authority": "^0.7.1",
