--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -6,6 +6,11 @@
       "permanent": true
     },
     {
+      "source": "/(campagne-dons|campagne-abonnements|abonnement)/",
+      "destination": "/abonnements",
+      "permanent": true
+    },
+    {
       "source": "/chere-frustration",
       "destination": "/contact",
       "permanent": true
@@ -16,8 +21,14 @@
       "permanent": true
     },
     {
-      "source": "/(dev|dev-1)/?",
-      "destination": "/"
+      "source": "/feed/",
+      "destination": "/feed.xml",
+      "permanent": true
+    },
+    {
+      "source": "/feed/rss/",
+      "destination": "/feed.xml",
+      "permanent": true
     }
   ]
 }
