--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@eslint/js": "^9.25.1",
     "@fontsource/bakbak-one": "^5.2.5",
     "@fontsource/bebas-neue": "^5.2.5",
+    "@fontsource/martel": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/open-sans": "^5.2.5",
     "@fontsource/parisienne": "^5.2.5",
