--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,11 +53,15 @@
     "balloons-js": "^0.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cssnano": "^7.0.7",
     "daisyui": "^5.0.28",
     "data-access": "workspace:*",
     "eslint": "^9.25.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "postcss-preset-env": "^10.1.6",
     "puppeteer": "^24.7.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
