--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -79,6 +79,8 @@
     "vite": "^6.3.3"
   },
   "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwind-scrollbar": "^4.0.2"
   }
 }
