--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,7 +6,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "target": "es2015",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "lib": [
       "es2015",
       "dom"
