--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "quoteProps": "consistent",
   "printWidth": 120,
   "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "tailwindFunctions": ["cn"],
   "overrides": [
     {
       "files": "*.astro",
