--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -44,12 +44,12 @@
     "next-auth": "5.0.0-beta.25",
     "puppeteer": "^24.9.0",
     "react": "^19.1.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "9.10.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "utils": "workspace:*",
     "zod": "^3.25.28"
@@ -63,6 +63,7 @@
     "eslint": "^9.27.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.3"
   }
 }
