--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "infisical run -- next dev",
-    "dev:prod": "infisical run --env prod -- next dev",
+    "dev:prod": "infisical run --env=prod -- next dev",
     "build": "infisical run -- next build",
-    "build:prod": "infisical run --env prod -- next build",
-    "start": "infisical run --env prod -- next start",
+    "build:prod": "infisical run --env=prod -- next build",
+    "start": "infisical run --env=prod -- next start",
     "lint": "next lint",
     "vercel-prisma": "cd ../../ && pnpm dlx prisma generate --schema='./packages/data-access/prisma/schema.prisma' && cd -",
     "vercel-build": "pnpm run vercel-prisma && eslint . && next build"
@@ -27,8 +27,9 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-table": "^8.21.3",
