--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -32,7 +32,9 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-form": "^1.23.7",
+    "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-table": "^8.21.3",
+    "@uploadthing/react": "^7.3.3",
     "@vercel/functions": "^2.1.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -43,6 +45,7 @@
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "puppeteer": "^24.9.0",
     "react": "^19.1.0",
     "react-day-picker": "9.10.0",
@@ -50,13 +53,16 @@
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uploadthing": "^7.7.4",
     "utils": "workspace:*",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
