✨ feat(dashboard): migrate to better-auth for authentication, update middleware, protect API routes and server functions

--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -20,8 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@/auth": ["./src/app/auth/auth.ts"]
+      "@/*": ["./src/*"]
     }
   },
   "include": [
