--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -36,6 +36,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@uploadthing/react": "^7.3.3",
     "@vercel/functions": "^2.1.0",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -44,7 +45,6 @@
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
-    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "puppeteer": "^24.9.0",
     "react": "^19.1.0",
