🧹 chore(*): update README for repository structure, clean placeholder in SignInForm, refactor event and paper item queries for consistency, adjust caching strategy in event and paper item pages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "infisical run -- astro dev --host",
-    "dev:prod": "infisical run --env =rod -- astro dev --host",
+    "dev:prod": "infisical run --env=prod -- astro dev --host",
     "start": "infisical run --env=prod -- astro dev",
     "build": "infisical run -- astro build",
     "build:prod": "infisical run --env=prod -- astro build",
